# FAKE_IT_TILL_YOU_MAKE_IT-02

./: .env  .gitignore  README.md  pyproject.toml
app/: __init__.py  crud.py  database.py  reader.py  redisUtils.py
utils/redis/: compose.yml
workflow/: Scam Detection and Classification System.json  Voice Scam Detection and Classification System.json
